[gd_scene load_steps=5 format=3 uid="uid://bm84lj6brofsk"]

[ext_resource type="Script" path="res://Projects/Board/board_editor.gd" id="1_1ap8g"]
[ext_resource type="Texture2D" uid="uid://dnr57c7q1yhjb" path="res://Assets/boards/board (1).png" id="2_2g5re"]
[ext_resource type="PackedScene" uid="uid://bjnm2kvowv46g" path="res://Projects/Board/Marker/marker_editor.tscn" id="3_b3nvr"]
[ext_resource type="PackedScene" uid="uid://pxqrvonok1lr" path="res://Projects/Garrison/garrison.tscn" id="4_kroq6"]

[node name="BoardEditor" type="Node2D"]
script = ExtResource("1_1ap8g")

[node name="Xiangqi" type="Sprite2D" parent="."]
position = Vector2(918, 1043)
scale = Vector2(2, 2)
texture = ExtResource("2_2g5re")

[node name="Markers" type="Node2D" parent="."]
position = Vector2(0, 84)

[node name="1" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 1900)

[node name="MarkerEditor2" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 1900)

[node name="MarkerEditor3" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 1900)

[node name="MarkerEditor4" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 1890)

[node name="MarkerEditor5" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 1890)

[node name="MarkerEditor6" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 1890)

[node name="MarkerEditor7" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 1900)

[node name="MarkerEditor8" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 1900)

[node name="MarkerEditor9" parent="Markers/1" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 1900)

[node name="2" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 1686)

[node name="MarkerEditor2" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 1686)

[node name="MarkerEditor3" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 1686)

[node name="MarkerEditor4" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 1685)

[node name="MarkerEditor5" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 1685)

[node name="MarkerEditor6" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 1685)

[node name="MarkerEditor7" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 1686)

[node name="MarkerEditor8" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 1686)

[node name="MarkerEditor9" parent="Markers/2" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 1686)

[node name="3" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 1472)

[node name="MarkerEditor2" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 1472)

[node name="MarkerEditor3" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 1472)

[node name="MarkerEditor4" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 1480)

[node name="MarkerEditor5" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 1480)

[node name="MarkerEditor6" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 1480)

[node name="MarkerEditor7" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 1472)

[node name="MarkerEditor8" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 1472)

[node name="MarkerEditor9" parent="Markers/3" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 1472)

[node name="4" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 1258)

[node name="MarkerEditor2" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 1258)

[node name="MarkerEditor3" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 1258)

[node name="MarkerEditor4" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(692, 1258)

[node name="MarkerEditor5" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(922, 1258)

[node name="MarkerEditor6" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(1150, 1258)

[node name="MarkerEditor7" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 1258)

[node name="MarkerEditor8" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 1258)

[node name="MarkerEditor9" parent="Markers/4" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 1258)

[node name="5" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 1044)

[node name="MarkerEditor2" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 1044)

[node name="MarkerEditor3" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 1044)

[node name="MarkerEditor4" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(692, 1044)

[node name="MarkerEditor5" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(922, 1044)

[node name="MarkerEditor6" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(1150, 1044)

[node name="MarkerEditor7" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 1044)

[node name="MarkerEditor8" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 1044)

[node name="MarkerEditor9" parent="Markers/5" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 1044)

[node name="6" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 858)

[node name="MarkerEditor2" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 858)

[node name="MarkerEditor3" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 858)

[node name="MarkerEditor4" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(692, 858)

[node name="MarkerEditor5" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(920, 858)

[node name="MarkerEditor6" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(1150, 858)

[node name="MarkerEditor7" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 858)

[node name="MarkerEditor8" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 858)

[node name="MarkerEditor9" parent="Markers/6" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 858)

[node name="7" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 644)

[node name="MarkerEditor2" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 644)

[node name="MarkerEditor3" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 644)

[node name="MarkerEditor4" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(692, 644)

[node name="MarkerEditor5" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(920, 644)

[node name="MarkerEditor6" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(1150, 644)

[node name="MarkerEditor7" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 644)

[node name="MarkerEditor8" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 644)

[node name="MarkerEditor9" parent="Markers/7" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 644)

[node name="8" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 430)

[node name="MarkerEditor2" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 430)

[node name="MarkerEditor3" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 430)

[node name="MarkerEditor4" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 433)

[node name="MarkerEditor5" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 433)

[node name="MarkerEditor6" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 433)

[node name="MarkerEditor7" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 430)

[node name="MarkerEditor8" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 430)

[node name="MarkerEditor9" parent="Markers/8" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 430)

[node name="9" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 216)

[node name="MarkerEditor2" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 216)

[node name="MarkerEditor3" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 216)

[node name="MarkerEditor4" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 228)

[node name="MarkerEditor5" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 228)

[node name="MarkerEditor6" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 228)

[node name="MarkerEditor7" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 216)

[node name="MarkerEditor8" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 216)

[node name="MarkerEditor9" parent="Markers/9" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 216)

[node name="10" type="Node2D" parent="Markers"]

[node name="MarkerEditor" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(2, 2)

[node name="MarkerEditor2" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(232, 2)

[node name="MarkerEditor3" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(462, 2)

[node name="MarkerEditor4" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(705, 23)

[node name="MarkerEditor5" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(927, 23)

[node name="MarkerEditor6" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(1149, 23)

[node name="MarkerEditor7" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(1380, 2)

[node name="MarkerEditor8" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(1610, 2)

[node name="MarkerEditor9" parent="Markers/10" instance=ExtResource("3_b3nvr")]
position = Vector2(1840, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Garrison" parent="CanvasLayer" instance=ExtResource("4_kroq6")]
unique_name_in_owner = true
mouse_filter = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(920, 1032)

[node name="Figures" type="Node2D" parent="."]
position = Vector2(0, -500)

[node name="Static_figures" type="Node2D" parent="."]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/1/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/2/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/3/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/4/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/5/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/6/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/7/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/8/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/9/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor2" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor3" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor4" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor5" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor6" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor7" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor8" to="." method="_on_marker_editor_selected_marker"]
[connection signal="selected_marker" from="Markers/10/MarkerEditor9" to="." method="_on_marker_editor_selected_marker"]
[connection signal="save" from="CanvasLayer/Garrison" to="." method="_on_garrison_save"]
